# Duksu

./: .env.example  .gitIgnore  .gitignore  README.md  alembic.ini  langgraph.json  lyrics.txt  pyproject.toml
.github/workflows/: cli-runner.yml  database-migration.yml
alembic/: env.py
alembic/versions/: 19c514dd8645_create_supabase_user_sync_trigger.py  19ca9d0b2b16_create_news_feeds_and_articles_tables.py  a36061e28468_create_news_source_mapping_and_query_.py  acf7562b405f_create_users_table.py
alembic/versions/prod/: 19c514dd8645_create_supabase_user_sync_trigger.py
doeksu/: __init__.py  agent.py  cli.py  config.py  logging_config.py  settings.py  system_prompt.md
doeksu/agent/: llm.py
doeksu/feed/: curator.py  model.py
doeksu/feed/scorer/: __init__.py  relevancy_scorer.py
doeksu/hackerrank/: nodes.py  tools.py  views.py
doeksu/news/: __init__.py  model.py  parser.py  reader.py
doeksu/news/source/: __init__.py  registry.py
doeksu/social_media/: agent.py  nodes.py
doeksu/social_media/source/: reddit.py
doeksu/utils/: time.py
doeksu_exec/: cli.py  config.py  state.py
doeksu_exec/nodes/: news_source_selector.py
doeksu_exec/storage/: db.py  enums.py  model.py  objectstore.py
doeksu_exec/workflows/: create_news_feed.py  populate_feed.py
doeksu_exec/workflows/nodes/: news_feed_manager.py
doeksu_exec/workflows/state/: state.py
duksu/: config.py  logging_config.py
duksu/agent/: prompts.py
duksu/feed/: __init__.py  curator.py  model.py  scorer.py
duksu/feed/scorer/: relevancy_scorer.py
duksu/news/: model.py  reader.py
duksu/news/source/: registry.py
duksu/utils/: time.py
duksu_exec/: cli.py  config.py  controller.py
duksu_exec/storage/: db.py  model.py  objectstore.py
duksu_exec/workflows/: create_news_feed.py  populate_feed.py
duksu_exec/workflows/nodes/: news_feed_manager.py
tests/: test_news_collection_google.py  test_news_parse_article.py  tests_feed_news_curator.py
tests/datasets/: news_articles.json
(+5 files in other folders)
