[project]
name = "simple-llm-workflow"
version = "0.1.0"
description = "A simple LLM workflow using LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "dotenv",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "langsmith>=0.0.60",
    "langchain-community",
    "openai>=1.0.0",
    "langchain-google-genai>=0.0.5",
    "python-dotenv>=1.0.0",
    "langchain-anthropic>=0.1.0",
    "requests>=2.31.0",
    "langgraph-cli",
    "langgraph-api",
    "langchain-openai",
    "pydantic>=2.0.0",
    "aiohttp",
    
    "feedparser",
    "lxml_html_clean",
    "googlenewsdecoder",
    "nltk",
    "newspaper3k"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black" 